--- a/dashboard/site/templates/dashboard/plugins/settings/switch.ejs
+++ b/dashboard/site/templates/dashboard/plugins/settings/switch.ejs
@@ -2,7 +2,7 @@
   Enable / Disable
 </span>
 <label class="switch">
-  <input id="save-switch-default-button" type="checkbox">
+  <input id="switch-default-button" type="checkbox">
   <span class="slider round"></span>
 </label>
 <span id="save-switch-default-save" class="save">
@@ -13,15 +13,16 @@
       e.preventDefault()
       $.ajax({
           type: "POST",
-          url: "/api/<%= server.id %>/<%= plugin %>",
+          url: "/api/<%= server.id %>/<%= plugin %>/switch-default",
           data: {
-              id: $("#save-switch-default-button").val(),
+              value: $("#switch-default-button").is(":checked"),
           },
           success: function(result) {
               alert('ok')
           },
           error: function(result) {
-              alert("error")
+              alert(result)
+              console.log(result)
           }
       })
   })
