enable/disable on load

--- a/dashboard/site/templates/dashboard/plugins/settings/switch.ejs
+++ b/dashboard/site/templates/dashboard/plugins/settings/switch.ejs
@@ -2,7 +2,7 @@
   Enable / Disable
 </span>
 <label class="switch">
-  <input id="switch-default-button" type="checkbox">
+  <input id="switch-default-button" type="checkbox" <%= enabled ? 'checked' : '' %>>
   <span class="slider round"></span>
 </label>
 <span id="save-switch-default-save" class="save">
