--- a/dashboard/site/templates/dashboard/plugin.ejs
+++ b/dashboard/site/templates/dashboard/plugin.ejs
@@ -1,7 +1,7 @@
 <%- include ../build/head.ejs %>
 
 <span class="selection">
-<%= plugin %> settings:
+<%= plugin.toTitleCase() %> Plugin Settings:
 </span>
 
 <div class="settings">
