--- a/dashboard/site/public/css/plugins.css
+++ b/dashboard/site/public/css/plugins.css
@@ -90,3 +90,27 @@
 .settings .switch .slider.round:before {
   border-radius: 50%;
 }
+
+.settings .prefix {
+    position: absolute;
+    top: 50px;
+    right: 70px;
+   -webkit-box-sizing: content-box;
+   -moz-box-sizing: content-box;
+   box-sizing: content-box;
+   padding: 10px 20px;
+   border: 1px solid #3f3f3f;
+   -webkit-border-radius: 3px;
+   border-radius: 3px;
+   color: rgba(255,255,255,1);
+   -o-text-overflow: clip;
+   text-overflow: clip;
+   background: rgba(89,89,89,1);
+   -webkit-box-shadow: 2px 2px 2px 0 rgba(0,0,0,0.2) inset;
+   box-shadow: 2px 2px 2px 0 rgba(0,0,0,0.2) inset;
+   -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+   -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+   -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+   transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+   width: 20px;,
+}
