--- a/dashboard/site/templates/dashboard/plugins/settings/switch.ejs
+++ b/dashboard/site/templates/dashboard/plugins/settings/switch.ejs
@@ -1,29 +1,4 @@
-<span class="name">
-  Enable / Disable
-</span>
 <label class="switch">
-  <input id="switch-default-button" type="checkbox" <%= enabled ? 'checked' : '' %>>
+  <input id="switch-default-button" type="checkbox" <%= isEnabled ? 'checked' : '' %>>
   <span class="slider round"></span>
 </label>
-<span id="save-switch-default-save" class="save">
-  SAVE
-</span>
-<script type="text/javascript">
-  $(document).on('click','#save-switch-default-save',function(e){
-      e.preventDefault()
-      $.ajax({
-          type: "POST",
-          url: "/api/<%= server.id %>/<%= plugin %>/switch-default",
-          data: {
-              value: $("#switch-default-button").is(":checked"),
-          },
-          success: function(result) {
-              alert('ok')
-          },
-          error: function(result) {
-              alert(result)
-              console.log(result)
-          }
-      })
-  })
-</script>
