--- a/dashboard/site/templates/dashboard/plugins/snipes.ejs
+++ b/dashboard/site/templates/dashboard/plugins/snipes.ejs
@@ -1,3 +1,28 @@
-<div class= "switch">
+<div class="setting">
+  <span class="name">
+    Enable / Disable
+  </span>
   <%- include settings/switch.ejs %>
+  <span id="save-switch-default-save" class="save">
+    SAVE
+  </span>
+  <script type="text/javascript">
+    $(document).on('click','#save-switch-default-save',function(e){
+        e.preventDefault()
+        $.ajax({
+            type: "POST",
+            url: "/api/<%= server.id %>/<%= plugin %>/switch-default",
+            data: {
+                value: $("#switch-default-button").is(":checked"),
+            },
+            success: function(result) {
+                alert('ok')
+            },
+            error: function(result) {
+                alert(result)
+                console.log(result)
+            }
+        })
+    })
+  </script>
 </div>
