--- a/dashboard/site/public/css/top.css
+++ b/dashboard/site/public/css/top.css
@@ -1,3 +1,76 @@
+.page {
+  margin: auto;
+  width: 60%;
+  padding: 10px;
+  position: relative;
+}
+
+.page .top {
+  right: 0;
+  position: absolute;
+}
+
+.page .left {
+  left: 0;
+  position: absolute;
+}
+
+.page .left .how {
+  width: 350px;
+  top: 2px;
+  height: 160px;
+  background-color: #23272A;
+  text-align: center;
+  margin: 10px;
+  position: relative;
+  margin-bottom: 20px;
+  cursor: pointer;
+  -moz-box-shadow: 0 0 3px #000;
+  -webkit-box-shadow: 0 0 3px #000;
+  box-shadow: 0 0 3px #000;
+  padding-top: 20px;
+  border-bottom: 1px solid #000;
+}
+
+.page .left .how .sub {
+  top: 30px;
+  position: absolute;
+  left: 0;
+  text-align: left;
+  padding: 20px;
+}
+
+
+.page .bar {
+  background-color: #23272A;
+  position: relative;
+  height: 150px;
+  -moz-box-shadow: 0 0 3px #000;
+  -webkit-box-shadow: 0 0 3px #000;
+  box-shadow: 0 0 3px #000;
+}
+
+
+.page .bar img {
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+  background-color: #99AAB5;
+  margin-top: 25px;
+  position: absolute;
+  left: 25px;
+}
+
+.page .bar .name {
+  position: absolute;
+  font-size: 25px;
+  top: 60px;
+  left: 140px;
+  text-align: left;
+  background: black;
+  padding: 0px 3px;
+}
+
 .top .user {
   width: 750px;
   height: 75px;
@@ -7,6 +80,9 @@
   position: relative;
   margin-bottom: 20px;
   cursor: pointer;
+  -moz-box-shadow: 0 0 3px #000;
+  -webkit-box-shadow: 0 0 3px #000;
+  box-shadow: 0 0 3px #000;
 }
 
 .top .user img {
