--- a/dashboard/site/public/css/top.css
+++ b/dashboard/site/public/css/top.css
@@ -7,21 +7,16 @@
 
 .page .top {
   right: 0;
+  top: 162px;
   position: absolute;
 }
 
 .page .left {
-  left: 0;
-  position: absolute;
-}
-
-.page .left .how {
   width: 350px;
   top: 2px;
-  height: 160px;
   background-color: #23272A;
   text-align: center;
-  margin: 10px;
+  margin: 10px 0px;
   position: relative;
   margin-bottom: 20px;
   cursor: pointer;
@@ -32,7 +27,7 @@
   border-bottom: 1px solid #000;
 }
 
-.page .left .how .sub {
+.page .left .sub {
   top: 30px;
   position: absolute;
   left: 0;
