cache guilds OwO

--- a/dashboard/site/templates/top/main.ejs
+++ b/dashboard/site/templates/top/main.ejs
@@ -5,7 +5,7 @@
   <div class="bar">
     <img class="icon" src="<%= server.icon ? server.iconURL : `https://dummyimage.com/128/7289DA/FFFFFF/&text=${encodeURIComponent(server.nameAcronym)}` %>"/>
     <span class="name"><%= server.name %></span>
-    <a href="https://www.patreon.com/badosz"">
+    <a href="https://www.patreon.com/badosz">
       <span class="premium">Get Premium</span>
     </a>
   </div>
