--- a/dashboard/site/public/css/top.css
+++ b/dashboard/site/public/css/top.css
@@ -91,7 +91,7 @@
   box-shadow: 0 0 3px #000;
 }
 
-.top .user img {
+.top .user #avatar {
   width: 50px;
   height: 50px;
   border-radius: 100%;
@@ -99,6 +99,13 @@
   margin-top: 12px;
   position: absolute;
   left: 15px;
+}
+
+.top .user #owner {
+  width: 20px;
+  top: 3px;
+  position: absolute;
+  left: calc(100% + 5px);
 }
 
 
