--- a/dashboard/site/templates/top/main.ejs
+++ b/dashboard/site/templates/top/main.ejs
@@ -31,8 +31,8 @@
 
       <div class="user" style="background:<%=  bg[user.id] ? `url("/public/img/bg/${bg[user.id]}.png")` : "" %>">
 
-      <img class="avatar" src="<%= user.avatar %>" width="50px" height="50px">
-      <span class="name"> <%= user.tag %> </span>
+      <img class="avatar" id="avatar" src="<%= user.avatar %>" width="50px" height="50px">
+      <span class="name"> <%= user.tag %> <%- server.owner.id == user.id ? `<img id="owner" src="/public/img/owner.png">` : ''%> </span>
       <div class="border">
         <div class="progress" style="width:<%= user.bar %>%">
         </div>
