--- a/dashboard/site/public/css/top.css
+++ b/dashboard/site/public/css/top.css
@@ -35,6 +35,30 @@
   padding: 20px;
 }
 
+.page .left .queue {
+  position: absolute;
+  left: 0;
+  text-align: left;
+  padding: 0px 20px;
+  height: 130px;
+  width: 300px;
+  overflow: auto;
+  white-space:nowrap;
+  overflow-x: hidden;
+}
+
+.page .left .queue .song {
+  width: 100%;
+}
+
+tr:nth-child(even) {
+  background-color: #fff;
+}
+
+table {
+  border-collapse: collapse;
+  width: 35%;
+}
 
 .page .bar {
   background-color: #23272A;
