--- a/dashboard/site/templates/commands/main.ejs
+++ b/dashboard/site/templates/commands/main.ejs
@@ -1,35 +1,24 @@
 <%- include ../build/head.ejs %>
-
 <div class="page">
-
-  <table class="commands">
-    <th>
-      Plugin
-    </th>
-    <th>
-      Command
-    </th>
-    <th>
-      Description
-    </th>
+  <div class="tab">
   <% Object.keys(plugins).forEach(function(plugin){ %>
-
-      <% plugins[plugin].forEach(command => { %>
-        <tr>
-          <td class>
-            <%= plugin %>
-          </td>
-          <td class = "name">
-            <%= command.name %>
-          </td>
-          <td>
-            <%= command.description %>
-          </td>
-        </tr>
+    <button class="tablinks" onclick="openPlugin(event, '<%= plugin %>')" <%- plugin == 'basic' ? 'id="basicPlugin"' : ''%>><%= plugins[plugin].name %></button>
+  <% }) %>
+  </div>
+  <% Object.keys(plugins).forEach(function(plugin){ %>
+      <div id="<%= plugin %>" class="tabcontent">
+      <% plugins[plugin].commands.forEach(command => { %>
+          <div class="command">
+            <span class="name"><%= command.name %></span>
+            <span class="description"><%= command.description %></span>
+          </div>
       <% }) %>
-
+      </div>
   <% }) %>
 
-  </table>
 
 </div>
+<script type="text/javascript" src="/public/js/commands.js"></script>
+<script type="text/javascript">
+document.getElementById("basicPlugin").click()
+</script>
