--- a/dashboard/site/templates/commands/index.html
+++ b/dashboard/site/templates/commands/index.html
@@ -18,31 +18,7 @@
 
         <div id="content-wrapper">
             <div id="content">
-
-                <button regular>Regular</button>
-                <button major>Major</button>
-
-                <div style="height: 100px"></div>
-
-                <h2>h2 title</h2>
-                <h4>h4 title</h4>
-
-                <div style="height: 100px"></div>
-
-                <h3>h3 title</h3>
-                <p>Text paragraph</p>
-                
-                <div style="height: 100px"></div>
-
-                <div center> <p>Centered content</p> </div>
-                <div center> <button>a</button> <button>b</button> </div>
-
-                <div style="height: 100px"></div>
-
-                <div class="box">
-                    
-                </div>
-
+                <h3>WIP</h3>
             </div>
         </div>
 
