--- a/dashboard/site/templates/main/index.html
+++ b/dashboard/site/templates/main/index.html
@@ -23,12 +23,12 @@
                 <div center id="l-wrapper">
                     <img id="l-logo" src="/public/img/landingpage_logo.svg" draggable="false"/>
                     <div id="l-buttons">
-                        <button regular fixed>Why Mike?</button>
+                        <button regular fixed onclick="scrollToContent()">Why Mike?</button>
                         <a major fixed class="button" href="https://discordapp.com/oauth2/authorize?client_id=419620594645073930&permissions=8&scope=bot">Get Started</a>
                     </div>
                 </div>
 
-                <h2>Mike's got it all!</h2>
+                <h2 id="contentScroll">Mike's got it all!</h2>
                 <h4>But here are some of his best features:</h4>
                 <div style="height: 50px"></div>
                 <div center>
