--- a/dashboard/site/public/css/global.css
+++ b/dashboard/site/public/css/global.css
@@ -118,6 +118,7 @@ header {
 #content {
     width: var(--content-width);
     max-width: var(--content-max-width);
+    min-height: calc(100vh - var(--footer-height) - var(--header-height) * 1.5);
 }
 
 footer {
@@ -182,6 +183,12 @@ button[major]:hover,.button[major]:hover {
     background: var(--accent-hover);
     color: var(--black);
 }
+button[small] {
+    font-size: 14px;
+    padding: 7px 20px;
+    margin: 10px;
+    border-radius: 3px;
+}
 button[fixed],.button[fixed] {
     width: 210px;
     padding: 22px 40px;
@@ -208,6 +215,12 @@ h4 {
     margin-bottom: 10px;
     width: 100%;
     text-align: center;
+}
+h6 {
+    color: var(--text-min);
+    font-size: 12px;
+    font-weight: var(--font-weight-normal);
+    margin: 4px;
 }
 
 p {
