--- a/dashboard/site/templates/wip/index.html
+++ b/dashboard/site/templates/wip/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div id="app">
-        <gheader pagename="Commands" color="var(--accent)"></gheader>
+        <gheader pagename="" color="var(--accent)"></gheader>
 
         <div id="content-wrapper">
             <div id="content">
