landing page api

--- a/dashboard/site/templates/team/index.html
+++ b/dashboard/site/templates/team/index.html
@@ -118,6 +118,11 @@
                         type: media.twitch,
                         href: 'https://twitch.tv/nimplexlive',
                         title: 'Discord Server'
+                    },
+                    {
+                        type: media.github,
+                        href: 'https://github.com/Nimplex',
+                        title: '@Nimplex'
                     }
                 ]
             },
