--- a/dashboard/site/templates/team/index.html
+++ b/dashboard/site/templates/team/index.html
@@ -128,7 +128,7 @@
             },
             {
                 name: 'Rami',
-                work: 'Commands',
+                work: 'Documentation',
                 icon: 'rami.png',
                 media: [
                     {
