--- a/dashboard/site/public/css/team.css
+++ b/dashboard/site/public/css/team.css
@@ -27,12 +27,12 @@
     flex-direction: column;
 }
 
-h3 {
+.userdesc > h3 {
     font-size: 26px;
     margin-bottom: 2px;
 }
 
-h4 {
+.userdesc > h4 {
     text-align: left;
     margin-bottom: 8px;
 }
