--- a/dashboard/site/templates/server/index.html
+++ b/dashboard/site/templates/server/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="/public/css/global.css">
     <link rel="stylesheet" type="text/css" href="/public/css/server.css">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.min.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
     <div id="app">
@@ -79,17 +80,12 @@
                         <div class="box">
                             <div id="google-ads-frame">
                                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                                <ins class="adsbygoogle"
-                                    style="display:block"
-                                    data-ad-test="true"
-                                    data-adtest="true"
-                                    data-ad-test="on"
-                                    data-adtest="on"
-                                    data-ad-client="ca-pub-7258530287607290"
-                                    data-ad-slot="1451265007"
-                                    data-ad-format="auto"
-                                    data-full-width-responsive="true"></ins>
-                                <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+                                <script>
+                                     (adsbygoogle = window.adsbygoogle || []).push({
+                                          google_ad_client: "ca-pub-7258530287607290",
+                                          enable_page_level_ads: true
+                                     });
+                                </script>
                             </div>
                             <h6>Advertisement</h6>
                         </div>
