header and footer changes

--- a/dashboard/site/public/css/global.css
+++ b/dashboard/site/public/css/global.css
@@ -87,8 +87,14 @@ header {
     padding-left: 5px;
 }
 
-#header-nav {
-    font-size: 20px;
+#header-nav-desktop {
+    font-size: 18px;
+}
+
+#header-nav-mobile {
+    position: absolute;
+    right: 5%;
+    visibility: hidden;
 }
 
 .nav-button {
@@ -123,10 +129,12 @@ header {
 
 footer {
     width: 100%;
-    height: var(--footer-height);
+    min-height: var(--footer-height);
     background: var(--header);
     display: flex;
     justify-content: center;
+    position: relative;
+    z-index: 100;
 }
 
 #footer-content {
@@ -134,7 +142,7 @@ footer {
     max-width: var(--content-max-width);
     display: flex;
     justify-content: space-between;
-    align-items: top;
+    align-items: start;
     padding-top: 50px;
     flex-wrap: wrap;
 }
@@ -242,4 +250,23 @@ div[center] {
     padding: var(--box-padding);
     margin-bottom: var(--box-margin);
     box-shadow: 0 2px 3px #00000077;
+}
+
+
+@media all and (max-width: 800px) {
+
+/*#header-nav-desktop {
+    visibility: hidden;
+}
+
+#header-nav-mobile {
+    visibility: visible;
+}*/
+
+.nav-button:not(.border) {
+    visibility: hidden;
+    position: absolute;
+    left: 5%;
+}
+
 }
