--- a/dashboard/site/templates/team/index.html
+++ b/dashboard/site/templates/team/index.html
@@ -89,7 +89,7 @@
                 media: [
                     {
                         type: media.website,
-                        href: 'https://maanex.tk/',
+                        href: 'https://maanex.tk/?utm_source=mikebot&utm_medium=teampage&utm_campaign=credits',
                         title: 'maanex.tk'
                     },
                     {
@@ -138,7 +138,7 @@
             },
             {
                 name: 'Rami',
-                work: 'Commands',
+                work: 'Documentation',
                 icon: 'rami.png',
                 media: [
                     {
@@ -149,7 +149,7 @@
                     {
                         type: media.twitter,
                         href: 'https://twitter.com/ramilego4game',
-                        title: 'ramilego4game'
+                        title: '@ramilego4game'
                     },
                     {
                         type: media.discord,
@@ -159,9 +159,8 @@
                     {
                         type: media.github,
                         href: 'https://github.com/ramilego4game',
-                        title: 'ramilego4game'
+                        title: '@ramilego4game'
                     }
-                    
                 ]
             }
         ];
