--- a/dashboard/site/templates/team/index.html
+++ b/dashboard/site/templates/team/index.html
@@ -89,7 +89,7 @@
                 media: [
                     {
                         type: media.website,
-                        href: 'https://maanex.tk/?utm_source=mikebot&utm_medium=teampage&utm_campaign=credits',
+                        href: 'https://maanex.tk/',
                         title: 'maanex.tk'
                     },
                     {
@@ -161,6 +161,7 @@
                         href: 'https://github.com/ramilego4game',
                         title: '@ramilego4game'
                     }
+                    
                 ]
             },
             {
