fixed leaderboard display bug

--- a/dashboard/site/templates/team/index.html
+++ b/dashboard/site/templates/team/index.html
@@ -89,7 +89,7 @@
                 media: [
                     {
                         type: media.website,
-                        href: 'https://maanex.tk/',
+                        href: 'https://maanex.tk/?utm_source=mikebot&utm_medium=teampage&utm_campaign=credits',
                         title: 'maanex.tk'
                     },
                     {
